--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "marked": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.0.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.4",
+    "showdown": "^1.9.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
